force-app/main/default/objects/user__c/user__c.object-meta.xml
<CustomObject>
    <label>user</label>
    <nameField>
        <label>Email</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>user</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>