force-app/main/default/objects/user__c/fields/email__c.field-meta.xml
<CustomField>
    <fullName>email__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>email</label>
    <type>Email</type>
    <unique>true</unique>
</CustomField>