force-app/main/default/objects/user__c/fields/remember_token__c.field-meta.xml
<CustomField>
    <fullName>remember_token__c</fullName>
    <label>remember_token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>