force-app/main/default/objects/user__c/fields/subscribe_newsletter__c.field-meta.xml
<CustomField>
    <fullName>subscribe_newsletter__c</fullName>
    <label>subscribe newsletter</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>on</fullName>
                <default>true</default>
                <label>on</label>
            </value>
            <value>
                <fullName>off</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>