force-app/main/default/objects/user__c/fields/wheretoknow__c.field-meta.xml
<CustomField>
    <fullName>wheretoknow__c</fullName>
    <label>wheretoknow</label>
    <length>200</length>
    <type>Text</type>
</CustomField>